--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,2 +1,1 @@
-<h1><%= @student.to_s %></h1>
-<p> This student is currently <%= @active %>. </p>
+<h1><%= link_to "#{@student.to_s}: This student is currently #{@active}.", student_path(@student) %></h1>
